--- a/HTML/geheugenkaarten/geheugenkaarten.html
+++ b/HTML/geheugenkaarten/geheugenkaarten.html
@@ -30,7 +30,7 @@
 			</div>
 			<div class="main-section">
 				<div class="title">
-					<h2>Harde schijven</h2>
+					<h2>Geheugenkaarten</h2>
 				</div>
 				<div class="categories">
 					<ul>
@@ -38,11 +38,11 @@
 						<li><a href="../monitoren/monitoren.html">Monitoren</a></li>
 						<li><a href="../toetsenborden/toetsenborden.html">Toetsenborden</a></li>
 						<li><a href="../muizen/muizen.html">Muizen</a></li>
-						<li><a href="#">Harde schijven</a></li>
-						<li><a href="#">Geluidskaarten</a></li>
+						<li><a href="../harde-schijven/hardeschijven.html">Harde schijven</a></li>
+						<li><a href="../geluidskaarten/geluidskaarten.html">Geluidskaarten</a></li>
 						<li><a href="#">Grafische kaarten</a></li>
 						<li><a href="#">Geheugenkaarten</a></li>
-						<li><a href="#">Netwerkkaarten</a></li>
+						<li><a href="../moederborden/moederborden.html">Moederborden</a></li>
 						<li></li>
 						<li></li>
 						<li></li>
@@ -52,47 +52,41 @@
 				<div class="products">
 					<div class="p-row">
 						<div class="product">
-							<a href="samsung850evo.html">
-							<img src="../../images/SAMSUNG-850.png" alt="samsung harde schijf">
-							<div class="discount">
-								<p>-25%</p>
-							</div>
-							<h3>SAMSUNG SSD - 250 GB</h3>
+							<a href="sandisk8gb-sdhc.html">
+							<img src="../../images/SANDISK-8-GB-SDHC.png" alt="sandisk geheugenkaart">
+							<h3>SANDISK 8 GB</h3>
 							</a>
 						</div>
 						<div class="product">
-							<a href="samsung850pro.html">
-							<img src="../../images/SAMSUNG-SSD-850.png" alt="samsung harde schijf">
-							<h3>SAMSUNG SSD - 256 GB</h3>
+							<a href="sandisk8gb.html">
+							<img src="../../images/SANDISK-MicroSDHC-8GB-Class-4.png" alt="sandisk geheugenkaart">
+							<h3>SANDISK 8 GB</h3>
 							</a>
 						</div>
 						<div class="product">
-							<a href="sandisk-ssd.html">
-							<img src="../../images/SANDISK-SSD.png" alt="sandisk harde schijf">
-							<div class="discount">
-								<p>-25%</p>
-							</div>
-							<h3>SANDISK SSD - 120GB</h3>
+							<a href="sandisk16gb.html">
+							<img src="../../images/SANDISK-16GB-EXTREME.png" alt="sandisk geheugenkaart">
+							<h3>SANDISK EXTREME 16GB</h3>
 							</a>
 						</div>
 					</div>
 					<div class="p-row">
 						<div class="product">
-							<a href="western-digital-2tb.html">
-							<img src="../../images/WESTERN-DIGITAL-2TB.png" alt="western digital harde schijf">
-							<h3>WD HDD - 2TB</h3>
+							<a href="sandisk32gb-ultra.html">
+							<img src="../../images/SANDISK-MicroSDHC-Ultra.png" alt="sandisk geheugenkaart">
+							<h3>SANDISK ULTRA 32GB</h3>
 							</a>
 						</div>
 						<div class="product">
-							<a href="western-digital-3tb.html">
-							<img src="../../images/WESTERN-DIGITAL-3TB.png" alt="western digital harde schijf">
-							<h3>WD HDD - 3TB</h3>
+							<a href="sandisk32gb-ultra.html">
+							<img src="../../images/SANDISK-SDHC-Extreme-32GB.png" alt="sandisk geheugenkaart">
+							<h3>SANDISK EXTREME 32GB</h3>
 							</a>
 						</div>
 						<div class="product">
-							<a href="seagate-sshd.html">
-							<img src="../../images/SEAGATE-2-TB.png" alt="seagate harde schijf">
-							<h3>SEAGATE SSHD - 2TB</h3>
+							<a href="lexar32gb-pro.html">
+							<img src="../../images/LEXAR-SDHC-Pro-32GB.png" alt="lexar geheugenkaart">
+							<h3>LEXAR Pro 32GB</h3>
 							</a>
 						</div>
 					</div>					
