--- a/HTML/geluidskaarten/geluidskaarten.html
+++ b/HTML/geluidskaarten/geluidskaarten.html
@@ -30,7 +30,7 @@
 			</div>
 			<div class="main-section">
 				<div class="title">
-					<h2>Voor 16:00 besteld, morgen in huis!</h2>
+					<h2>Geluidskaarten</h2>
 				</div>
 				<div class="categories">
 					<ul>
