--- a/HTML/Complete-pc/complete-pc.html
+++ b/HTML/Complete-pc/complete-pc.html
@@ -30,19 +30,19 @@
 			</div>
 			<div class="main-section">
 				<div class="title">
-					<h2>Monitoren</h2>
+					<h2>Complete PC's</h2>
 				</div>
 				<div class="categories">
 					<ul>
 						<li>Producten</li>
-						<li><a href="../monitoren/monitoren.html">Monitoren</a></li>
-						<li><a href="../toetsenborden/toetsenborden.html">Toetsenborden</a></li>
-						<li><a href="../muizen/muizen.html">Muizen</a></li>
-						<li><a href="#">Harde schijven</a></li>
-						<li><a href="#">Geluidskaarten</a></li>
-						<li><a href="../grafische-kaarten/Grafische-kaarten.html">Grafische kaarten</a></li>
-						<li><a href="#">Geheugenkaarten</a></li>
-						<li><a href="../moederborden/moederborden.html">Moederbord</a></li>
+						<li><a href="complete-pc.html">Complete PC's</a></li>
+						<li><a href="../notebook/notebook.html">Notebooks </a></li>
+						<li><a> </a></li>
+						<li><a> </a></li>
+						<li><a> </a></li>
+						<li><a> </a></li>
+						<li><a> </a></li>
+						<li><a> </a></li>
 						<li></li>
 						<li></li>
 						<li></li>
