--- a/HTML/grafische-kaarten/Grafische-kaarten.html
+++ b/HTML/grafische-kaarten/Grafische-kaarten.html
@@ -30,7 +30,7 @@
 			</div>
 			<div class="main-section">
 				<div class="title">
-					<h2>Monitoren</h2>
+					<h2>Grafische kaarten</h2>
 				</div>
 				<div class="categories">
 					<ul>
@@ -54,9 +54,6 @@
 						<div class="product">
 							<a href="../grafische-kaarten/ASUS-R9-Fury-Strix.html">
 							<img src="../../images/ASUS R9 Fury Strix.jpg" alt="ASUS R9 Fury Strix">
-							<div class="discount">
-								<p>-99%</p>
-							</div>
 							<h3>ASUS R9 Fury Strix </h3>
 							</a>
 						</div>
@@ -69,9 +66,6 @@
 						<div class="product">
 							<a href="../grafische-kaarten/MSI-GeForce-GTX-750-TI.html">
 							<img src="../../images/GeForce GTX 750.png"  alt="MSI GeForce GTX 750">
-							<div class="discount">
-								<p>-110%</p>
-							</div>
 							<h3>MSI GeForce GTX 750 TI</h3>
 							</a>
 						</div>
