--- a/HTML/moederborden/moederborden.html
+++ b/HTML/moederborden/moederborden.html
@@ -30,7 +30,7 @@
 			</div>
 			<div class="main-section">
 				<div class="title">
-					<h2>Monitoren</h2>
+					<h2>Moederborden</h2>
 				</div>
 				<div class="categories">
 					<ul>
@@ -42,7 +42,7 @@
 						<li><a href="#">Geluidskaarten</a></li>
 						<li><a href="../grafische-kaarten/Grafische-kaarten.html">Grafische kaarten</a></li>
 						<li><a href="#">Geheugenkaarten</a></li>
-						<li><a href="moederborden.html">Moederbord</a></li>
+						<li><a href="moederborden.html">Moederborden</a></li>
 						<li></li>
 						<li></li>
 						<li></li>
@@ -64,6 +64,8 @@
 							<a href="Gigabyte GA-H170N.html">
 							<img src="../../images/Gigabyte GA-H170N-WIFI.png" alt=" Gigabyte GA-H170N">
 							<h3>Gigabyte GA-H170N</h3>
+							<div class="discount">
+								<p>-57%</p>
 							</a>
 						</div>
 						<div class="product">
@@ -81,12 +83,18 @@
 							<a href="Gigabyte GA-Z170X G5.html">
 							<img src="../../images/Gigabyte Z170X-Gaming G5.png" alt="Gigabyte GA-Z170X G5">
 							<h3>Gigabyte GA-Z170X G5</h3>
+							<div class="discount">
+								<p>-30%</p>
+
 							</a>
 						</div>
 						<div class="product">
 							<a href="Raspberry Pi 2.html">
 							<img src="../../images/Raspberry Pi 2.jpg" alt="Raspberry Pi2">
 							<h3>Raspberry Pi 2</h3>
+							<div class="discount">
+								<p>-45%</p>
+
 							</a>
 						</div>
 						<div class="product">
