--- a/HTML/notebook/notebook.html
+++ b/HTML/notebook/notebook.html
@@ -30,19 +30,19 @@
 			</div>
 			<div class="main-section">
 				<div class="title">
-					<h2>Monitoren</h2>
+					<h2>Notebooks</h2>
 				</div>
 				<div class="categories">
 					<ul>
 						<li>Producten</li>
-						<li><a href="../monitoren/monitoren.html">Monitoren</a></li>
-						<li><a href="../toetsenborden/toetsenborden.html">Toetsenborden</a></li>
-						<li><a href="../muizen/muizen.html">Muizen</a></li>
-						<li><a href="#">Harde schijven</a></li>
-						<li><a href="#">Geluidskaarten</a></li>
-						<li><a href="../grafische-kaarten/Grafische-kaarten.html">Grafische kaarten</a></li>
-						<li><a href="#">Geheugenkaarten</a></li>
-						<li><a href="../moederborden/moederborden.html">Moederbord</a></li>
+						<li><a href="../Complete-pc/complete-pc.html">Complete PC's</a></li>
+						<li><a href="../notebook/notebook.html">Notebooks </a></li>
+						<li><a> </a></li>
+						<li><a> </a></li>
+						<li><a> </a></li>
+						<li><a> </a></li>
+						<li><a> </a></li>
+						<li><a> </a></li>
 						<li></li>
 						<li></li>
 						<li></li>
@@ -52,48 +52,46 @@
 				<div class="products">
 					<div class="p-row">
 						<div class="product">
-							<a href="Acer Aspire E5-573-35BH.html">
+							<a href="Acer Aspire E5-573.html">
 							<img src="../../images/Acer Aspire E5-573-35BH.jpg"  alt="Acer Aspire E5-573-35BH">
 							<div class="discount">
 								<p>-64</p>
 							</div>
-							<h3>Acer Aspire E5-573-35BH</h3>
+							<h3>Acer Aspire E5-573</h3>
 							</a>
 						</div>
 						<div class="product">
-							<a href="Asus EeeBook X205TA-FD0061TS.html">
+							<a href="Asus EeeBook X205TA.html">
 							<img src="../../images/Asus EeeBook X205TA-FD0061TS.jpg" alt=" Acer Predator G6-710">
-							<h3>Asus EeeBook X205TA-FD0061TS</h3>
+							<h3>Acer Aspire E5-573</h3>
 							</a>
 						</div>
 						<div class="product">
 							<a href="HP 15-af122nd.html">
-							<img src="../../images/Asus G20CB-NL009T.jpg" alt="Asus G20CB-NL009T">
+							<img src="../../images/HP 15-af122nd.jpg" alt="HP 15-af122nd">
+							<h3>HP 15-af122nd</h3>
 							<div class="discount">
 								<p>-1%</p>
 							</div>
-							<h3>Asus G20CB-NL009T</h3>
+							
 							</a>
 						</div>
 					</div>
 					<div class="p-row">
 						<div class="product">
-							<a href="Lenovo IdeaPad G50-80 80E50394NX.html">
+							<a href="Lenovo IdeaPad G50-80.html">
 							<img src="../../images/Lenovo IdeaPad G50-80 80E50394NX.jpg" alt="Lenovo IdeaPad G50-80 80E50394NX">
-							<h3>Lenovo IdeaPad G50-80 80E50394NX</h3>
-							</a>
+							<h3>Lenovo IdeaPad G50-80</h3>
 						</div>
 						<div class="product">
-							<a href="Lenovo IdeaPad Z51-70 80K601A4NX.html">
+							<a href="Lenovo IdeaPad Z51-70.html">
 							<img src="../../images/Lenovo IdeaPad Z51-70 80K601A4NX.jpg" alt="Lenovo IdeaPad Z51-70 80K601A4NX">
-							<h3>Lenovo IdeaPad Z51-70 80K601A4NX</h3>
-							</a>
+							<h3>Lenovo IdeaPad Z51-70</h3>
 						</div>
 						<div class="product">
-							<a href="MSI GT80S 6QF-091NL TITAN.html">
-							<img src="../../images/MSI GeForce 210 1GB.jpg"  alt="Medion Akoya P2222 D">
-							<h3>MSI GT80S 6QF-091NL TITAN</h3>
-							</a>
+							<a href="MSI GT80S TITAN.html">
+							<img src="../../images/MSI GT80S 6QF-091NL TITAN.jpg"  alt="MSI GT80S TITAN">
+							<h3>MSI GT80S TITAN</h3>
 						</div>
 					</div>					
 				</div>
