--- a/HTML/reparatie.html
+++ b/HTML/reparatie.html
@@ -34,7 +34,7 @@
 					<h2>Reparatie</h2>
 				</div>
 				<div class="reparation-page">
-  				<div class="pricetable">
+					<div class="repflex">
   					<table class="price-table">
   						<tr>
   							<td class="row1">Laptop</td>
@@ -44,22 +44,63 @@
   						<tr>
   							<td class="row3">TFT</td>	
   						</tr>
-  							<td class="row3">- Full-HD (1080p)</td>
-  							<td class="row4">€74,99</td>
+  							<td class="row4">- Full-HD (1080p)</td>
+  							<td class="row5">€74,99</td>
   						</tr>
   						<tr>
-  							<td class="3row">- HD-Ready (720p)</td>
-  							<td class="4row">€54,99
-  					</table>
+  							<td class="row4">- HD-Ready (720p)</td>
+  							<td class="row5">€54,99</td>
+  						</tr>
+						<tr>
+							<td class="row3">LCD</td>
+						</tr>
+						</tr>
+  							<td class="row4">- Full-HD (1080p)</td>
+  							<td class="row5">€79,99</td>
+  						</tr>
+  						<tr>
+  							<td class="row4">- HD-Ready (720p)</td>
+  							<td class="row5">€64,99</td>
+  						</tr>
+  						<tr>
+  							<td class="row2">Toetsenbord</td>
+  						</tr>
+  						<tr>
+  							<td class="row4">- Engels (U.S.) layout</td>
+  							<td class="row5">€19,99</td>
+  						</tr>
+  						<tr>
+  							<td class="row4">- Nederlands (Nederland) layout</td>
+  							<td class="row5">€14,99</td>
+  						</tr>
+  						<tr>
+  							<td class="row2">Touchpad</td>
+  						</tr>
+  						<tr>
+  							<td class="row3">- Capacitatief</td>
+  							<td class="row5">€14,99</td>
+  						</tr>
+  						<tr>
+  							<td class="row3">- Resistief</td>
+  							<td class="row5">€19,99</td>
+  						</tr>
+  						<tr>
+  							<td class="row2">Waterschade</td>
+  							<td class="row5">- Analyse nodig*</td>
+  						</tr>
+  						<tr>
+  							<td class="row2">Computer</td>
+  						</tr>
+  						</table>
+  					<div class="image">
+  						<img src="../images/laptopreparatie.jpg" alt="laptop reparatie">
+  					</div>
+  					</div>
+  					 <p class="software-info">
+  						Uw computer moet eerst worden nagekeken of het een software- of hardware matige probleem heeft. Als het een software matig probleem betreft installeren wij een geheel nieuwe besturingssysteem. De licenties en werk-uren komen voor uw rekening. Als uw computer hardware matige problemen heeft dan moeten we onderzoeken welke onderdelen dit zijn en moeten we vervangen door nieuwe componenten.
+  					</p>
   				</div>
-  				<div class="img">
-  					<img src="../images/laptopreparatie.jpg" alt="laptop reparatie">
-  				</div>
-  				<div class="conditions">flex item 3</div>  
 				</div>
-				</div>
-				
-				
 			</div>
 		</div>
 	</body>
