algemene dingen aangepast

--- a/HTML/computers.html
+++ b/HTML/computers.html
@@ -36,7 +36,7 @@
 					<ul>
 						<li>Producten</li>
 						<li><a href="Complete-pc/complete-pc.html">Complete PC's</a></li>
-						<li><a href="notebook/notebook.html">Notebook's</a></li>
+						<li><a href="notebook/notebook.html">Notebooks</a></li>
 						<li></li>
 						<li></li>
 						<li></li>
@@ -52,42 +52,39 @@
 				<div class="products">
 					<div class="p-row">
 						<div class="product">
-							<a href="productpagina.html">
-							<img src="../images/computer-placeholder.jpg" alt="placeholder_product">
-							<h3>Productnaam</h3>
+							<a href="Complete-pc/Acer Aspire XC-704.html">
+							<img src="../images/Acer Aspire XC-704 I3930.jpg" alt="Acer Aspire XC-704 ">
+							<h3>Acer Aspire XC-704</h3>
 							</a>
 						</div>
 						<div class="product">
-							<a href="productpagina.html">
-							<img src="../images/computer-placeholder.jpg" alt="placeholder_product">
-							<h3>Productnaam</h3>
+							<a href="Complete-pc/Acer Predator G6-710.html">
+							<img src="../images/Acer Predator G6-710 I9940.jpg" alt=" Acer Predator G6-710">
+							<h3>Acer Predator G6-710</h3>
 							</a>
 						</div>
 						<div class="product">
-							<a href="productpagina.html">
-							<img src="../images/computer-placeholder.jpg" alt="placeholder_product">
-							<h3>Productnaam</h3>
+							<a href="Complete-pc/ASUS G20CB-NL009T.html">
+							<img src="../images/Asus G20CB-NL009T.jpg" height="159" width="220" alt="ASUS G20CB-NL009T">
+							<h3>ASUS G20CB-NL009T</h3>
 							</a>
 						</div>
 					</div>
 					<div class="p-row">
 						<div class="product">
-							<a href="productpagina.html">
-							<img src="../images/computer-placeholder.jpg" alt="placeholder_product">
-							<h3>Productnaam</h3>
-							</a>
+							<a href="notebook/Lenovo IdeaPad G50-80.html">
+							<img src="../images/Lenovo IdeaPad G50-80 80E50394NX.jpg" alt="Lenovo IdeaPad G50-80 80E50394NX">
+							<h3>Lenovo IdeaPad G50-80</h3>
 						</div>
 						<div class="product">
-							<a href="productpagina.html">
-							<img src="../images/computer-placeholder.jpg" alt="placeholder_product">
-							<h3>Productnaam</h3>
-							</a>
+							<a href="notebook/Lenovo IdeaPad Z51-70.html">
+							<img src="../images/Lenovo IdeaPad Z51-70 80K601A4NX.jpg" alt="Lenovo IdeaPad Z51-70 80K601A4NX">
+							<h3>Lenovo IdeaPad Z51-70</h3>
 						</div>
 						<div class="product">
-							<a href="productpagina.html">
-							<img src="../images/computer-placeholder.jpg" alt="placeholder_product">
-							<h3>Productnaam</h3>
-							</a>
+							<a href="notebook/MSI GT80S TITAN.html">
+							<img src="../images/MSI GT80S 6QF-091NL TITAN.jpg"  alt="MSI GT80S TITAN">
+							<h3>MSI GT80S TITAN</h3>
 						</div>
 					</div>					
 				</div>
