--- a/HTML/grafische-kaarten/Grafische-kaarten.html
+++ b/HTML/grafische-kaarten/Grafische-kaarten.html
@@ -38,10 +38,10 @@
 						<li><a href="../monitoren/monitoren.html">Monitoren</a></li>
 						<li><a href="../toetsenborden/toetsenborden.html">Toetsenborden</a></li>
 						<li><a href="../muizen/muizen.html">Muizen</a></li>
-						<li><a href="#">Harde schijven</a></li>
-						<li><a href="#">Geluidskaarten</a></li>
-						<li><a href="Grafische-kaarten.html">Grafische kaarten</a></li>
-						<li><a href="#">Geheugenkaarten</a></li>
+						<li><a href="../harde-schijven/hardeschijven.html">Harde schijven</a></li>
+						<li><a href="../geluidskaarten/geluidskaarten.html">Geluidskaarten</a></li>
+						<li><a href="#">Grafische kaarten</a></li>
+						<li><a href="../geheugenkaarten/geheugenkaarten.html">Geheugenkaarten</a></li>
 						<li><a href="../moederborden/moederborden.html">Moederborden</a></li>
 						<li></li>
 						<li></li>
@@ -87,6 +87,9 @@
 							<a href="../grafische-kaarten/MSI-Radeon-R9-390-8GB.html">
 							<img src="../../images/MSI R9 390.png" alt="Apple monitor">
 							<h3>MSI Radeon R9 390</h3>
+							<div class="discount">
+								<p>-40%</p>
+							</div>
 							</a>
 						</div>
 					</div>					
