--- a/HTML/home.html
+++ b/HTML/home.html
@@ -1,15 +1,11 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		
 		<meta charset="utf-8">
 		<title>PC4U</title>
 		<link href='https://fonts.googleapis.com/css?family=Ubuntu:400italic' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Karla' rel='stylesheet' type='text/css'>
 		<link href="../stylesheet.css" rel="stylesheet" type="text/css"> 
-		<link href="../style-home.css" rel="stylesheet" type="text/css">
-		
-
 	</head>
 	<body>
 		<div class="container">
@@ -54,12 +50,18 @@
 				</div>
 				<div class="social">
 					<h3>Volg ons ook op social media:</h3>
-					<a href="http:\\www.instagram.com">
+					<a href="http://www.instagram.com">
 						<img src="../images/insta.png" alt="instagram">
 					</a>
+					<a href="http://www.facebook.com">
 						<img src="../images/facebok.png" alt="Facebook">
+					</a>
+					<a href="http://www.twitter.com">
 						<img src="../images/twitter.png" alt="Twittar">
+					</a>
+					<a href="http://www.linkedin.com">
 						<img src="../images/linkedout.jpg" alt="LinkedIn">
+					</a>
 				</div>
 				</div>
 			</div>
