--- a/HTML/notebook/notebook.html
+++ b/HTML/notebook/notebook.html
@@ -36,13 +36,13 @@
 					<ul>
 						<li>Producten</li>
 						<li><a href="../Complete-pc/complete-pc.html">Complete PC's</a></li>
-						<li><a href="../notebook/notebook.html">Notebooks </a></li>
-						<li><a> </a></li>
-						<li><a> </a></li>
-						<li><a> </a></li>
-						<li><a> </a></li>
-						<li><a> </a></li>
-						<li><a> </a></li>
+						<li><a href="#">Notebooks </a></li>
+						<li></li>
+						<li></li>
+						<li></li>
+						<li></li>
+						<li></li>
+						<li></li>
 						<li></li>
 						<li></li>
 						<li></li>
@@ -54,9 +54,6 @@
 						<div class="product">
 							<a href="Acer Aspire E5-573.html">
 							<img src="../../images/Acer Aspire E5-573-35BH.jpg"  alt="Acer Aspire E5-573-35BH">
-							<div class="discount">
-								<p>-64</p>
-							</div>
 							<h3>Acer Aspire E5-573</h3>
 							</a>
 						</div>
@@ -70,10 +67,6 @@
 							<a href="HP 15-af122nd.html">
 							<img src="../../images/HP 15-af122nd.jpg" alt="HP 15-af122nd">
 							<h3>HP 15-af122nd</h3>
-							<div class="discount">
-								<p>-1%</p>
-							</div>
-							
 							</a>
 						</div>
 					</div>
