--- a/HTML/shop.html
+++ b/HTML/shop.html
@@ -41,7 +41,7 @@
 						<li><a href="harde-schijven/hardeschijven.html">Harde schijven</a></li>
 						<li><a href="geluidskaarten/geluidskaarten.html">Geluidskaarten</a></li>
 						<li><a href="grafische-kaarten/Grafische-kaarten.html">Grafische kaarten</a></li>
-						<li><a href="#">Geheugenkaarten</a></li>
+						<li><a href="geheugenkaarten/geheugenkaarten.html">Geheugenkaarten</a></li>
 						<li><a href="moederborden/moederborden.html">Moederborden</a></li>
 						<li></li>
 						<li></li>
@@ -52,47 +52,44 @@
 				<div class="products">
 					<div class="p-row">
 						<div class="product">
-							<a href="productpagina.html">
-							<img src="../images/computer-placeholder.jpg" alt="placeholder_product">
+							<a href="geheugenkaarten/sandisk32gb-extreme.html">
+							<img src="../images/SANDISK-SDHC-Extreme-32GB.png" alt="sandisk geheugenkaart">
+							<h3>SANDISK EXTREME 32GB</h3>
+							</a>
+						</div>
+						<div class="product">
+							<a href="monitoren/Applethunderbold.html">
+							<img src="../images/APPLE-Thunderbolt-Display-(27-inch).png" alt="apple monitor">
+							<h3>APPLE THUNDERBOLD</h3>
+							</a>
+						</div>
+						<div class="product">
+							<a href="harde-schijven/sandisk-ssd.html">
+							<img src="../images/SANDISK-SSD.png" alt="sandisk harde schijf">
 							<div class="discount">
 								<p>-25%</p>
 							</div>
-							<h3>Productnaam</h3>
-							</a>
-						</div>
-						<div class="product">
-							<a href="productpagina.html">
-							<img src="../images/computer-placeholder.jpg" alt="placeholder_product">
-							<h3>Productnaam</h3>
-							</a>
-						</div>
-						<div class="product">
-							<a href="productpagina.html">
-							<img src="../images/computer-placeholder.jpg" alt="placeholder_product">
-							<div class="discount">
-								<p>-70%</p>
-							</div>
-							<h3>Productnaam</h3>
+							<h3>SANDISK SSD - 120 GB</h3>
 							</a>
 						</div>
 					</div>
 					<div class="p-row">
 						<div class="product">
-							<a href="productpagina.html">
-							<img src="../images/computer-placeholder.jpg" alt="placeholder_product">
-							<h3>Productnaam</h3>
+							<a href="toetsenborden/logitech-k120.html">
+							<img src="../images/LOGITECH-K120.png" alt="logitech toetsenbord">
+							<h3>LOGITECH K120</h3>
 							</a>
 						</div>
 						<div class="product">
-							<a href="productpagina.html">
-							<img src="../images/computer-placeholder.jpg" alt="placeholder_product">
-							<h3>Productnaam</h3>
+							<a href="geluidskaarten/creative-sb.html">
+							<img src="../images/CREATIVE-LABS-SB.png" alt="creative geluidskaart">
+							<h3>CREATIVE LABS SB 5,1 VX</h3>
 							</a>
 						</div>
 						<div class="product">
-							<a href="productpagina.html">
-							<img src="../images/computer-placeholder.jpg" alt="placeholder_product">
-							<h3>Productnaam</h3>
+							<a href="grafische-kaarten/MSI-GeForce-GTX-980-TI-GAMINGK-6G.html">
+							<img src="../images/GeForce GTX 980.jpg" alt="msi grafische kaart">
+							<h3>MSI GeForce GTX 980 TI</h3>
 							</a>
 						</div>
 					</div>					
