--- a/HTML/Complete-pc/complete-pc.html
+++ b/HTML/Complete-pc/complete-pc.html
@@ -35,14 +35,14 @@
 				<div class="categories">
 					<ul>
 						<li>Producten</li>
-						<li><a href="complete-pc.html">Complete PC's</a></li>
+						<li><a href="#">Complete PC's</a></li>
 						<li><a href="../notebook/notebook.html">Notebooks </a></li>
-						<li><a> </a></li>
-						<li><a> </a></li>
-						<li><a> </a></li>
-						<li><a> </a></li>
-						<li><a> </a></li>
-						<li><a> </a></li>
+						<li></li>
+						<li></li>
+						<li></li>
+						<li></li>
+						<li></li>
+						<li></li>
 						<li></li>
 						<li></li>
 						<li></li>
@@ -54,9 +54,6 @@
 						<div class="product">
 							<a href="Acer Aspire XC-704.html">
 							<img src="../../images/Acer Aspire XC-704 I3930.jpg"  alt="Acer Aspire XC-704 ">
-							<div class="discount">
-								<p>-666%</p>
-							</div>
 							<h3>Acer Aspire XC-704</h3>
 							</a>
 						</div>
@@ -69,9 +66,6 @@
 						<div class="product">
 							<a href="ASUS G20CB-NL009T.html">
 							<img src="../../images/Asus G20CB-NL009T.jpg" height="159" width="220" alt="ASUS G20CB-NL009T">
-							<div class="discount">
-								<p>-40%</p>
-							</div>
 							<h3>ASUS G20CB-NL009T</h3>
 							</a>
 						</div>
