--- a/HTML/Informatie.html
+++ b/HTML/Informatie.html
@@ -7,7 +7,6 @@
 		<link href='https://fonts.googleapis.com/css?family=Ubuntu:400italic' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Karla' rel='stylesheet' type='text/css'>
 		<link href="../stylesheet.css" rel="stylesheet" type="text/css">
-		<link href="../style-informatie.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
 		<div class="container">
@@ -45,7 +44,7 @@
 					Telefoon:076 573 3444
 					</p>
 					<p>
-					E-mail: PH80@rocwb.nl
+					E-mail: info@pc4u.nl
 					</p>
 					</div>
 					<iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1473.3691583315017!2d4.776773675197775!3d51.606689943212075!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c69f986ff1e1b1%3A0xde96dee71e46a13f!2sRadius+College!5e0!3m2!1snl!2snl!4v1450189410013" width="450" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
