--- a/HTML/geheugenkaarten/geheugenkaarten.html
+++ b/HTML/geheugenkaarten/geheugenkaarten.html
@@ -40,7 +40,7 @@
 						<li><a href="../muizen/muizen.html">Muizen</a></li>
 						<li><a href="../harde-schijven/hardeschijven.html">Harde schijven</a></li>
 						<li><a href="../geluidskaarten/geluidskaarten.html">Geluidskaarten</a></li>
-						<li><a href="#">Grafische kaarten</a></li>
+						<li><a href="../grafische-kaarten/Grafische-kaarten.html">Grafische kaarten</a></li>
 						<li><a href="#">Geheugenkaarten</a></li>
 						<li><a href="../moederborden/moederborden.html">Moederborden</a></li>
 						<li></li>
