--- a/HTML/harde-schijven/hardeschijven.html
+++ b/HTML/harde-schijven/hardeschijven.html
@@ -39,10 +39,10 @@
 						<li><a href="../toetsenborden/toetsenborden.html">Toetsenborden</a></li>
 						<li><a href="../muizen/muizen.html">Muizen</a></li>
 						<li><a href="#">Harde schijven</a></li>
-						<li><a href="#">Geluidskaarten</a></li>
-						<li><a href="#">Grafische kaarten</a></li>
-						<li><a href="#">Geheugenkaarten</a></li>
-						<li><a href="#">Netwerkkaarten</a></li>
+						<li><a href="../geluidskaarten/geluidskaarten.html">Geluidskaarten</a></li>
+						<li><a href="../grafische-kaarten/Grafische-kaarten.html">Grafische kaarten</a></li>
+						<li><a href="../geheugenkaarten/geheugenkaarten.html">Geheugenkaarten</a></li>
+						<li><a href="../moederborden/moederborden.html">Moederborden</a></li>
 						<li></li>
 						<li></li>
 						<li></li>
