--- a/HTML/moederborden/moederborden.html
+++ b/HTML/moederborden/moederborden.html
@@ -38,11 +38,11 @@
 						<li><a href="../monitoren/monitoren.html">Monitoren</a></li>
 						<li><a href="../toetsenborden/toetsenborden.html">Toetsenborden</a></li>
 						<li><a href="../muizen/muizen.html">Muizen</a></li>
-						<li><a href="#">Harde schijven</a></li>
-						<li><a href="#">Geluidskaarten</a></li>
+						<li><a href="../harde-schijven/hardeschijven.html">Harde schijven</a></li>
+						<li><a href="../geluidskaarten/geluidskaarten.html">Geluidskaarten</a></li>
 						<li><a href="../grafische-kaarten/Grafische-kaarten.html">Grafische kaarten</a></li>
-						<li><a href="#">Geheugenkaarten</a></li>
-						<li><a href="moederborden.html">Moederborden</a></li>
+						<li><a href="../geheugenkaarten/geheugenkaarten.html">Geheugenkaarten</a></li>
+						<li><a href="#">Moederborden</a></li>
 						<li></li>
 						<li></li>
 						<li></li>
@@ -54,9 +54,6 @@
 						<div class="product">
 							<a href="ASUS Rampage IV Gene.html">
 							<img src="../../images/ASUS Rampage IV Gene.jpg" alt=" ASUS Rampage IV Gene">
-							<div class="discount">
-								<p>-77%</p>
-							</div>
 							<h3>ASUS Rampage IV Gene</h3>
 							</a>
 						</div>
@@ -64,16 +61,11 @@
 							<a href="Gigabyte GA-H170N.html">
 							<img src="../../images/Gigabyte GA-H170N-WIFI.png" alt=" Gigabyte GA-H170N">
 							<h3>Gigabyte GA-H170N</h3>
-							<div class="discount">
-								<p>-57%</p>
 							</a>
 						</div>
 						<div class="product">
 							<a href="Gigabyte GA-Z170X G1.html">
 							<img src="../../images/GIGABYTE GA-Z170X-GAMING.png" alt="Gigabyte GA-Z170X G1">
-							<div class="discount">
-								<p>-90%</p>
-							</div>
 							<h3>Gigabyte GA-Z170X G1</h3>
 							</a>
 						</div>
@@ -83,18 +75,12 @@
 							<a href="Gigabyte GA-Z170X G5.html">
 							<img src="../../images/Gigabyte Z170X-Gaming G5.png" alt="Gigabyte GA-Z170X G5">
 							<h3>Gigabyte GA-Z170X G5</h3>
-							<div class="discount">
-								<p>-30%</p>
-
 							</a>
 						</div>
 						<div class="product">
 							<a href="Raspberry Pi 2.html">
 							<img src="../../images/Raspberry Pi 2.jpg" alt="Raspberry Pi2">
 							<h3>Raspberry Pi 2</h3>
-							<div class="discount">
-								<p>-45%</p>
-
 							</a>
 						</div>
 						<div class="product">
