--- a/HTML/muizen/madcatz.html
+++ b/HTML/muizen/madcatz.html
@@ -38,14 +38,14 @@
 						<li><a href="../monitoren/monitoren.html">Monitoren</a></li>
 						<li><a href="../toetsenborden/toetsenborden.html">Toetsenborden</a></li>
 						<li><a href="muizen.html">Muizen</a></li>
-						<li><a href="#">Harde schijven</a></li>
-						<li><a href="#">Geluidskaarten</a></li>
-						<li><a href="#">Grafische kaarten</a></li>
-						<li><a href="#">Geheugenkaarten</a></li>
-						<li><a href="#">Netwerkkaarten</a></li>
+						<li><a href="../harde-schijven/hardeschijven.html">Harde schijven</a></li>
+						<li><a href="../geluidskaarten/geluidskaarten.html">Geluidskaarten</a></li>
+						<li><a href="../grafische-kaarten/Grafische-kaarten.html">Grafische kaarten</a></li>
+						<li><a href="../geheugenkaarten/geheugenkaarten.html">Geheugenkaarten</a></li>
+						<li><a href="../moederborden/moederborden.html">Moederborden</a></li>
 						<li class="cattab">Computers</li>
-						<li><a href="#">Complete PC's</a></li>
-						<li><a href="#">Notebook's</a></li>
+						<li><a href="../Complete-pc/complete-pc.html">Complete PC's</a></li>
+						<li><a href="../notebook/notebook.html">Notebook's</a></li>
 						<li></li>
 					</ul>
 				</div>
