linkjes bewerkt voor index.html

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 		<title>PC4U</title>
 		<link href='https://fonts.googleapis.com/css?family=Ubuntu:400italic' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Karla' rel='stylesheet' type='text/css'>
-		<link href="stylesheet.css" rel="stylesheet" type="text/css">
+		<link href="stylesheet.css" rel="stylesheet" type="text/css"> 
 	</head>
 	<body>
 		<div class="container">
 			<div class="top-section">
 				<div class="company">
 					<div class="logo">
-						<img src="images/logo.png"/>
+						<img src="images/logo.png" alt="PC4U">
 					</div>
 					<div class="slogan">
 						<h1>Het beste, maar dan goedkoper!</h1>
@@ -23,14 +23,51 @@
 						<li><a href="#">Home</a></li>
 						<li><a href="HTML/shop.html">Shop</a></li>
 						<li><a href="HTML/computers.html">Computers</a></li>
-						<li><a href="#">Reparatie</a></li>
-						<li><a href="#">Informatie</a></li>
+						<li><a href="HTML/reparatie.html">Reparatie</a></li>
+						<li><a href="HTML/informatie.html">Informatie</a></li>
 					</ul>
 				</div>
 			</div>
 			<div class="main-section">
+				<div class="review">
+					<h2>Bezoekers beoordeelden ons met: <img src="images/6stars.png" alt="5 Sterren"></h2>
+						
+				</div>
+				<div class="slidecontainer">
+						<div class="slideshow">
+							<img class="slide" id="slide1" src="images/slide1.jpg" alt="instagram">
+							<img class="slide" id="slide2" src="images/slide5.jpg" alt="winkol">
+							<img class="slide" id="slide3" src="images/slide2.png" alt="ICT">	
+							<img class="slide" id="slide4" src="images/slide3.png" alt="ICT winkel">
+						</div>
+					
+						<div class="slideup">
+							<img id="slideup-l" src="images/arrleft.png" alt="Slide left">
+						</div>
+						<div class="slideup">
+							<img id="slideup-r" src="images/arrright.png" alt="Slide right">
+						</div>
+				</div>
+				<div class="social">
+					<h3>Volg ons ook op social media:</h3>
+					<a href="http://www.instagram.com">
+						<img src="images/insta.png" alt="instagram">
+					</a>
+					<a href="http://www.facebook.com">
+						<img src="images/facebok.png" alt="Facebook">
+					</a>
+					<a href="http://www.twitter.com">
+						<img src="images/twitter.png" alt="Twittar">
+					</a>
+					<a href="http://www.linkedin.com">
+						<img src="images/linkedout.jpg" alt="LinkedIn">
+					</a>
+				</div>
+				</div>
 			</div>
 		</div>
+		<script src="Jquery/jquery.min.js"></script>
+		<script src="Javascript/jquery-scrollto.js"></script>
+		<script src="Javascript/main.js"></script>
 	</body>
 </html>
-
