--- a/HTML/productpagina.html
+++ b/HTML/productpagina.html
@@ -20,7 +20,7 @@
 				</div>
 				<div class="nav">
 					<ul>
-						<li><a href="../home.html">Home</a></li>
+						<li><a href="../index.html">Home</a></li>
 						<li><a href="../shop.html">Shop</a></li>
 						<li><a href="../computers.html">Computers</a></li>
 						<li><a href="../reparatie.html">Reparatie</a></li>
