--- a/HTML/Informatie.html
+++ b/HTML/Informatie.html
@@ -46,9 +46,30 @@
 					<p>
 					E-mail: info@pc4u.nl
 					</p>
-					</div>
+					<form>
+			          <div class="form-group">
+			            <label for="first-name">Naam: </label>
+			            <input type="text" id="first-name">
+			          </div>
+			          <div class="form-group">
+			            <label for="last-name">Achternaam: </label>
+			            <input type="text" id="last-name">
+			          </div>
+			          <div class="form-group">
+			            <label for="email">E-mail: </label>
+			            <input type="email" id="email">
+			          </div>
+			          <div class="form-group">
+			            <label for="your-story">Uw verhaal: </label>
+			            <textarea id="your-story" cols="30" rows="10"></textarea>
+			          </div>
+			          <div class="form-group">
+			            <input type="submit" value="send">
+			          </div>
+			        </form>					
+			        </div>
 					<iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1473.3691583315017!2d4.776773675197775!3d51.606689943212075!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c69f986ff1e1b1%3A0xde96dee71e46a13f!2sRadius+College!5e0!3m2!1snl!2snl!4v1450189410013" width="450" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
-  
+  				</div>
 			</div>
 		</div>
 	</body>
