--- a/HTML/Complete-pc/complete-pc.html
+++ b/HTML/Complete-pc/complete-pc.html
@@ -22,7 +22,7 @@
 					<ul>
 						<li><a href="../../index.html">Home</a></li>
 						<li><a href="../shop.html">Shop</a></li>
-						<li><a href="../computers.html">Computers</a></li>
+						<li class="active"><a href="../computers.html">Computers</a></li>
 						<li><a href="../reparatie.html">Reparatie</a></li>
 						<li><a href="../informatie.html">Informatie</a></li>
 					</ul>
@@ -35,7 +35,7 @@
 				<div class="categories">
 					<ul>
 						<li>Producten</li>
-						<li><a href="#">Complete PC's</a></li>
+						<li class="active"><a href="#">Complete PC's</a></li>
 						<li><a href="../notebook/notebook.html">Notebooks </a></li>
 						<li></li>
 						<li></li>
@@ -78,7 +78,7 @@
 							</a>
 						</div>
 						<div class="product">
-							<a href="">
+							<a href="HP Slimline 450-a101nd.html">
 							<img src="../../images/HP Slimline 450-a101nd.jpg" alt="HP Slimline 450-a101nd">
 							<h3>HP Slimline 450-a101nd</h3>
 							</a>
