--- a/HTML/Informatie.html
+++ b/HTML/Informatie.html
@@ -25,7 +25,7 @@
 						<li><a href="shop.html">Shop</a></li>
 						<li><a href="computers.html">Computers</a></li>
 						<li><a href="reparatie.html">Reparatie</a></li>
-						<li><a href="Informatie.html">Informatie</a></li>
+						<li class="active"><a href="Informatie.html">Informatie</a></li>
 					</ul>
 				</div>
 			</div>
