--- a/HTML/grafische-kaarten/Grafische-kaarten.html
+++ b/HTML/grafische-kaarten/Grafische-kaarten.html
@@ -21,7 +21,7 @@
 				<div class="nav">
 					<ul>
 						<li><a href="../../index.html">Home</a></li>
-						<li><a href="../shop.html">Shop</a></li>
+						<li class="active"><a href="../shop.html">Shop</a></li>
 						<li><a href="../computers.html">Computers</a></li>
 						<li><a href="../reparatie.html">Reparatie</a></li>
 						<li><a href="../informatie.html">Informatie</a></li>
@@ -40,7 +40,7 @@
 						<li><a href="../muizen/muizen.html">Muizen</a></li>
 						<li><a href="../harde-schijven/hardeschijven.html">Harde schijven</a></li>
 						<li><a href="../geluidskaarten/geluidskaarten.html">Geluidskaarten</a></li>
-						<li><a href="#">Grafische kaarten</a></li>
+						<li class="active"><a href="#">Grafische kaarten</a></li>
 						<li><a href="../geheugenkaarten/geheugenkaarten.html">Geheugenkaarten</a></li>
 						<li><a href="../moederborden/moederborden.html">Moederborden</a></li>
 						<li></li>
