--- a/HTML/moederborden/Raspberry Pi 2.html
+++ b/HTML/moederborden/Raspberry Pi 2.html
@@ -21,7 +21,7 @@
 				<div class="nav">
 					<ul>
 						<li><a href="../../index.html">Home</a></li>
-						<li><a href="../shop.html">Shop</a></li>
+						<li class="active"><a href="../shop.html">Shop</a></li>
 						<li><a href="../computers.html">Computers</a></li>
 						<li><a href="../reparatie.html">Reparatie</a></li>
 						<li><a href="../Informatie.html">Informatie</a></li>
@@ -41,7 +41,7 @@
 						<li><a href="../geluidskaarten/geluidskaarten.html">Geluidskaarten</a></li>
 						<li><a href="../Grafische-kaarten.html">Grafische kaarten</a></li>
 						<li><a href="../geheugenkaarten/geheugenkaarten.html">Geheugenkaarten</a></li>
-						<li><a href="moederborden.html">Moederborden</a></li>
+						<li class="active"><a href="moederborden.html">Moederborden</a></li>
 						<li class="cattab">Computers</li>
 						<li><a href="../Complete-pc/complete-pc.html">Complete PC's</a></li>
 						<li><a href="../notebook/notebook.html">Notebook's</a></li>
