--- a/HTML/notebook/notebook.html
+++ b/HTML/notebook/notebook.html
@@ -22,7 +22,7 @@
 					<ul>
 						<li><a href="../../index.html">Home</a></li>
 						<li><a href="../shop.html">Shop</a></li>
-						<li><a href="../computers.html">Computers</a></li>
+						<li class="active"><a href="../computers.html">Computers</a></li>
 						<li><a href="../reparatie.html">Reparatie</a></li>
 						<li><a href="../informatie.html">Informatie</a></li>
 					</ul>
@@ -36,7 +36,7 @@
 					<ul>
 						<li>Producten</li>
 						<li><a href="../Complete-pc/complete-pc.html">Complete PC's</a></li>
-						<li><a href="#">Notebooks </a></li>
+						<li class="active"><a href="#">Notebooks </a></li>
 						<li></li>
 						<li></li>
 						<li></li>
