--- a/HTML/reparatie.html
+++ b/HTML/reparatie.html
@@ -6,7 +6,6 @@
 		<link href='https://fonts.googleapis.com/css?family=Ubuntu:400italic' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Karla' rel='stylesheet' type='text/css'>
 		<link href="../stylesheet.css" rel="stylesheet" type="text/css">
-		<link href="../stylereparatie.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
 		<div class="container">
@@ -24,7 +23,7 @@
 						<li><a href="../index.html">Home</a></li>
 						<li><a href="shop.html">Shop</a></li>
 						<li><a href="computers.html">Computers</a></li>
-						<li><a href="reparatie.html">Reparatie</a></li>
+						<li class="active"><a href="reparatie.html">Reparatie</a></li>
 						<li><a href="informatie.html">Informatie</a></li>
 					</ul>
 				</div>
