--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				</div>
 				<div class="nav">
 					<ul>
-						<li><a href="#">Home</a></li>
+						<li class="active"><a href="#">Home</a></li>
 						<li><a href="HTML/shop.html">Shop</a></li>
 						<li><a href="HTML/computers.html">Computers</a></li>
 						<li><a href="HTML/reparatie.html">Reparatie</a></li>
