--- a/HTML/Complete-pc/Acer Predator G6-710.html
+++ b/HTML/Complete-pc/Acer Predator G6-710.html
@@ -22,7 +22,7 @@
 					<ul>
 						<li><a href="../../index.html">Home</a></li>
 						<li><a href="../shop.html">Shop</a></li>
-						<li><a href="../computers.html">Computers</a></li>
+						<li class="active"><a href="../computers.html">Computers</a></li>
 						<li><a href="../reparatie.html">Reparatie</a></li>
 						<li><a href="../Informatie.html">Informatie</a></li>
 					</ul>
@@ -44,7 +44,7 @@
 						<li><a href="../geheugenkaarten/geheugenkaarten.html">Geheugenkaarten</a></li>
 						<li><a href="../moederborden/moederborden.html">Moederborden</a></li>
 						<li class="cattab">Computers</li>
-						<li><a href="complete-pc.html">Complete PC's</a></li>
+						<li class="active"><a href="complete-pc.html">Complete PC's</a></li>
 						<li><a href="../notebook/notebook.html">Notebook's</a></li>
 						<li></li>
 					</ul>
