--- a/HTML/computers.html
+++ b/HTML/computers.html
@@ -22,7 +22,7 @@
 					<ul>
 						<li><a href="../index.html">Home</a></li>
 						<li><a href="shop.html">Shop</a></li>
-						<li><a href="computers.html">Computers</a></li>
+						<li class="active"><a href="computers.html">Computers</a></li>
 						<li><a href="reparatie.html">Reparatie</a></li>
 						<li><a href="informatie.html">Informatie</a></li>
 					</ul>
