--- a/HTML/geheugenkaarten/geheugenkaarten.html
+++ b/HTML/geheugenkaarten/geheugenkaarten.html
@@ -21,7 +21,7 @@
 				<div class="nav">
 					<ul>
 						<li><a href="../../index.html">Home</a></li>
-						<li><a href="../shop.html">Shop</a></li>
+						<li class="active"><a href="../shop.html">Shop</a></li>
 						<li><a href="../computers.html">Computers</a></li>
 						<li><a href="../reparatie.html">Reparatie</a></li>
 						<li><a href="../informatie.html">Informatie</a></li>
@@ -41,7 +41,7 @@
 						<li><a href="../harde-schijven/hardeschijven.html">Harde schijven</a></li>
 						<li><a href="../geluidskaarten/geluidskaarten.html">Geluidskaarten</a></li>
 						<li><a href="../grafische-kaarten/Grafische-kaarten.html">Grafische kaarten</a></li>
-						<li><a href="#">Geheugenkaarten</a></li>
+						<li class="active"><a href="#">Geheugenkaarten</a></li>
 						<li><a href="../moederborden/moederborden.html">Moederborden</a></li>
 						<li></li>
 						<li></li>
