--- a/HTML/geluidskaarten/geluidskaarten.html
+++ b/HTML/geluidskaarten/geluidskaarten.html
@@ -21,7 +21,7 @@
 				<div class="nav">
 					<ul>
 						<li><a href="../../index.html">Home</a></li>
-						<li><a href="../shop.html">Shop</a></li>
+						<li class="active"><a href="../shop.html">Shop</a></li>
 						<li><a href="../computers.html">Computers</a></li>
 						<li><a href="../reparatie.html">Reparatie</a></li>
 						<li><a href="../informatie.html">Informatie</a></li>
@@ -39,7 +39,7 @@
 						<li><a href="../toetsenborden/toetsenborden.html">Toetsenborden</a></li>
 						<li><a href="../muizen/muizen.html">Muizen</a></li>
 						<li><a href="../harde-schijven/hardeschijven.html">Harde schijven</a></li>
-						<li><a href="#">Geluidskaarten</a></li>
+						<li class="active"><a href="#">Geluidskaarten</a></li>
 						<li><a href="../grafische-kaarten/Grafische-kaarten.html">Grafische kaarten</a></li>
 						<li><a href="../geheugenkaarten/geheugenkaarten.html">Geheugenkaarten</a></li>
 						<li><a href="../moederborden/moederborden.html">Moederborden</a></li>
