--- a/HTML/monitoren/Applethunderbold.html
+++ b/HTML/monitoren/Applethunderbold.html
@@ -21,7 +21,7 @@
 				<div class="nav">
 					<ul>
 						<li><a href="../../index.html">Home</a></li>
-						<li><a href="../shop.html">Shop</a></li>
+						<li class="active"><a href="../shop.html">Shop</a></li>
 						<li><a href="../computers.html">Computers</a></li>
 						<li><a href="../reparatie.html">Reparatie</a></li>
 						<li><a href="../Informatie.html">Informatie</a></li>
@@ -35,7 +35,7 @@
 				<div class="categories">
 					<ul>
 						<li>Shop</li>
-						<li><a href="monitoren.html">Monitoren</a></li>
+						<li class="active"><a href="monitoren.html">Monitoren</a></li>
 						<li><a href="../toetsenborden/toetsenborden.html">Toetsenborden</a></li>
 						<li><a href="../muizen/muizen.html">Muizen</a></li>
 						<li><a href="../harde-schijven/hardeschijven.html">Harde schijven</a></li>
