--- a/HTML/muizen/muizen.html
+++ b/HTML/muizen/muizen.html
@@ -21,7 +21,7 @@
 				<div class="nav">
 					<ul>
 						<li><a href="../../index.html">Home</a></li>
-						<li><a href="../shop.html">Shop</a></li>
+						<li class="active"><a href="../shop.html">Shop</a></li>
 						<li><a href="../computers.html">Computers</a></li>
 						<li><a href="../reparatie.html">Reparatie</a></li>
 						<li><a href="../informatie.html">Informatie</a></li>
@@ -37,7 +37,7 @@
 						<li>Producten</li>
 						<li><a href="../monitoren/monitoren.html">Monitoren</a></li>
 						<li><a href="../toetsenborden/toetsenborden.html">Toetsenborden</a></li>
-						<li><a href="#">Muizen</a></li>
+						<li class="active"><a href="#">Muizen</a></li>
 						<li><a href="../harde-schijven/hardeschijven.html">Harde schijven</a></li>
 						<li><a href="../geluidskaarten/geluidskaarten.html">Geluidskaarten</a></li>
 						<li><a href="../grafische-kaarten/Grafische-kaarten.html">Grafische kaarten</a></li>
