--- a/HTML/shop.html
+++ b/HTML/shop.html
@@ -21,7 +21,7 @@
 				<div class="nav">
 					<ul>
 						<li><a href="../index.html">Home</a></li>
-						<li><a href="shop.html">Shop</a></li>
+						<li class="active"><a href="shop.html">Shop</a></li>
 						<li><a href="computers.html">Computers</a></li>
 						<li><a href="reparatie.html">Reparatie</a></li>
 						<li><a href="informatie.html">Informatie</a></li>
