--- a/HTML/toetsenborden/logitech-k800.html
+++ b/HTML/toetsenborden/logitech-k800.html
@@ -21,7 +21,7 @@
 				<div class="nav">
 					<ul>
 						<li><a href="../../index.html">Home</a></li>
-						<li><a href="../shop.html">Shop</a></li>
+						<li class="active"><a href="../shop.html">Shop</a></li>
 						<li><a href="../computers.html">Computers</a></li>
 						<li><a href="../reparatie.html">Reparatie</a></li>
 						<li><a href="../Informatie.html">Informatie</a></li>
@@ -36,7 +36,7 @@
 					<ul>
 						<li>Shop</li>
 						<li><a href="../monitoren/monitoren.html">Monitoren</a></li>
-						<li><a href="toetsenborden/toetsenborden.html">Toetsenborden</a></li>
+						<li class="active"><a href="toetsenborden.html">Toetsenborden</a></li>
 						<li><a href="../muizen/muizen.html">Muizen</a></li>
 						<li><a href="../harde-schijven/hardeschijven.html">Harde schijven</a></li>
 						<li><a href="../geluidskaarten/geluidskaarten.html">Geluidskaarten</a></li>
