--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 				<div class="slidecontainer">
 						<div class="slideshow">
 							<img class="slide" id="slide1" src="images/slide1.jpg" alt="instagram">
-							<img class="slide" id="slide2" src="images/slide5.jpg" alt="winkol">
-							<img class="slide" id="slide3" src="images/slide2.png" alt="ICT">	
-							<img class="slide" id="slide4" src="images/slide3.png" alt="ICT winkel">
+							<img class="slide" id="slide2" src="images/slide2.jpg" alt="winkol">
+							<img class="slide" id="slide3" src="images/slide3.jpg" alt="ICT">	
+							<img class="slide" id="slide4" src="images/slide5.jpg" alt="ICT winkel">
 						</div>
 					
 						<div class="slideup">
