--- a/HTML/Complete-pc/Acer Predator G6-710.html
+++ b/HTML/Complete-pc/Acer Predator G6-710.html
@@ -52,7 +52,7 @@
 				<div class="product-part">
 					<div class="productinfo">
 						<div class="imgproduct">
-							<img src="../../images/Acer Predator G6-710 I9940-2.jpg"   alt="Acer Aspire XC-704">
+							<img src="../../images/Acer Predator G6-710 I9940-2.jpg"   alt="Acer predator pc">
 						</div>
 						<div class="besproduct">
 							<h3>Acer Predator G6-710</h3>
