--- a/HTML/Complete-pc/MEDION AKOYA P2222 D.html
+++ b/HTML/Complete-pc/MEDION AKOYA P2222 D.html
@@ -51,7 +51,7 @@
 				<div class="product-part">
 					<div class="productinfo">
 						<div class="imgproduct">
-							<img src="../../images/Medion Akoya P2222 D-2.jpg" height="210" width="290"  alt="HP Slimline 450-a101nd">
+							<img src="../../images/Medion Akoya P2222 D-2.jpg" height="210" width="290"  alt="MEDION PC">
 						</div>
 						<div class="besproduct">
 							<h3>MEDION AKOYA P2222 D</h3>
