--- a/HTML/notebook/MSI GT80S TITAN.html
+++ b/HTML/notebook/MSI GT80S TITAN.html
@@ -52,7 +52,7 @@
 				<div class="product-part">
 					<div class="productinfo">
 						<div class="imgproduct">
-							<img src="../../images/MSI GT80S 6QF-091NL TITAN-2.jpg" alt="Lenovo IdeaPad Z51-70 80K601A4NX">
+							<img src="../../images/MSI GT80S 6QF-091NL TITAN-2.jpg" alt="MSI notebook">
 						</div>
 						<div class="besproduct">
 							<h3>MSI GT80S 6QF-091NL TITAN</h3>
