--- a/HTML/reparatie.html
+++ b/HTML/reparatie.html
@@ -37,12 +37,14 @@
   					<table class="price-table">
   						<tr>
   							<td class="row1">Laptop</td>
-  						<tr>
+  						</tr>
+              <tr>
   							<td class="row2">Scherm</td>
   						</tr>
   						<tr>
   							<td class="row3">TFT</td>	
   						</tr>
+              <tr>
   							<td class="row4">- Full-HD (1080p)</td>
   							<td class="row5">€74,99</td>
   						</tr>
@@ -50,10 +52,10 @@
   							<td class="row4">- HD-Ready (720p)</td>
   							<td class="row5">€54,99</td>
   						</tr>
-						<tr>
+              <tr>
 							<td class="row3">LCD</td>
-						</tr>
-						</tr>
+						  </tr>
+						  <tr>
   							<td class="row4">- Full-HD (1080p)</td>
   							<td class="row5">€79,99</td>
   						</tr>
@@ -84,13 +86,10 @@
   							<td class="row5">€19,99</td>
   						</tr>
   						<tr>
-  							<td class="row2">Waterschade</td>
-  							<td class="row5">- Analyse nodig*</td>
+  							<td class="row2 row-m">Waterschade</td>
+  							<td class="row5">Analyse nodig*</td>
   						</tr>
-  						<tr>
-  							<td class="row2">Computer</td>
-  						</tr>
-  						</table>
+  					</table>
   					<div class="image">
   						<img src="../images/laptopreparatie.jpg" alt="laptop reparatie">
   					</div>
